--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 ➢ 3D Modeling
 </p>
         </div>
-        <div  class="right"><img src="assets/img/background.png" alt=""></div>
+        <div  class="right"><img src="assets/img/background.webp" alt=""></div>
     </div>
 
 
